...
                    isLottieVisible ?
                        <Lottie resizeMode="cover" source={require("../../assets/icon.json")} autoPlay /> :
                        <Animated.Image source={require("../../assets/logo.png")} style={{ height: logoSize, width: logoSize }} />
                }
            </Animated.View>
            <View style={styles.form}>
                <TextInput testID="username" label={"E-mail"} mode="outlined" onChangeText={setUsername} />
                <TextInput testID="password" secureTextEntry={true} label={"Senha"} mode="outlined" onChangeText={setPassword} />
                <Button style={styles.button} mode="contained" icon={"send"} onPress={() => login(username, password)}>Logar</Button>
            </View>
        </KeyboardAvoidingView>
    );
}
